[package]
name = "tcp_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
bincode = { version = "2.0.1", features = ["serde"] }
chrono = "0.4.42"
futures-util = { version = "0.3.31", features = ["sink"] }
jsonwebtoken = "9.3.1"
serde = { version = "1.0.225", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["codec"] }
